class SearchSpecializationDto {
    constructor(name, description) {
        this.name = name;
        this.description =description;
    }
}

module.exports = SearchSpecializationDto;