@startuml
title "Specialization Search Class Diagram"

class SpecializationController {
    +searchSpecialization(req: Request, res: Response): Promise<void>
}

class SearchSpecializationDto {
    +name: string
    +description: string
    +constructor(name: string, description: string)
}

class SpecializationService {
    +{static} searchSpecializations(searchDto: SearchSpecializationDto): Promise<SpecializationDto[]>
}

class SpecializationRepository {
    +searchSpecialization(filters: Object): Promise<Specialization[]>
}

class SpecializationDto {
    +name: string
    +description: string
    +constructor(name: string, description: string)
}

class Specialization {
    +id: String
    +name: String
    +description: String
    +createdAt: Date
    +updatedAt: Date
}

SpecializationController --> SearchSpecializationDto: creates
SpecializationController --> SpecializationService: uses
SpecializationService --> SpecializationRepository: uses
SpecializationService --> SpecializationDto: creates
SpecializationRepository --> Specialization: manages

note right of SpecializationRepository
  Handles MongoDB queries with
  case-insensitive regex search
end note

@enduml